--- a/conf/application.conf
+++ b/conf/application.conf
@@ -375,3 +375,8 @@ Quill.poolMaxQueueSize=256
 Quill.poolMaxObjects=128
 Quill.poolMaxIdle=1800
 Quill.poolValidationInterval=100
+play.filters.disabled += "play.filters.headers.SecurityHeadersFilter"
+play.filters.csrf.header.bypassHeaders {
+	X-Requested-With = "*"
+	Csrf-Token = "nocheck"
+}
